[project]
name = "openai-response-api"
version = "0.1.0"
description = "This is to test and examine the OpenAI response framework."
authors = [
    {name = "MinKhantYCC",email = "linyaungzin99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<=3.13.7"
dependencies = [
    "openai (>=2.2.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain[all] (>=0.3.27,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
